--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,28 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Node.js
+node_modules/
+package-lock.json
+dist/
+
+# Logs and caches
+*.log
+.npm/
+.cache/
+
+# Environment files
+.env
+.env.local
+.env.development
+.env.production
+
+# OS and editor files
+.DS_Store
+*.swp
+.vscode/
+
+# Build outputs
+/public/build/
+/src/assets/*.mp4
